@@ -3,6 +3,7 @@ hw-detect (1.72) UNRELEASED; urgency=low
   [ Colin Watson ]
   * 'dmraid -c -s' changed its output format in 1.0.0.rc15; cope with both
     old and new (merged from Ubuntu).
+  * Ask the correct parameters question if modprobe fails.
 
   [ Frans Pop ]
   * Install usbutils based on presence of /sys/bus/usb.
